build: release 0.4.0; move FFM backends to the separate beckon-ffm artifact
The signalfd/kqueue backends now live in net.clojars.savya/beckon-ffm (JDK 22+).
Core keeps the OS-aware SignalBackend selector so beckon-ffm can plug in.